; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/extr_asiliantfb.c_asiliantfb_set_par.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/extr_asiliantfb.c_asiliantfb_set_par.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fb_info = type { %struct.TYPE_6__, %struct.TYPE_5__ }
%struct.TYPE_6__ = type { i32, i32, %struct.TYPE_4__, i32 }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_5__ = type { i32, i32 }

@FB_VISUAL_PSEUDOCOLOR = common dso_local global i32 0, align 4
@FB_VISUAL_TRUECOLOR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.fb_info*)* @asiliantfb_set_par to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @asiliantfb_set_par(%struct.fb_info* %0) #0 {
  %2 = alloca %struct.fb_info*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.fb_info* %0, %struct.fb_info** %2, align 8
  %6 = load %struct.fb_info*, %struct.fb_info** %2, align 8
  %7 = getelementptr inbounds %struct.fb_info, %struct.fb_info* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %7, i32 0, i32 3
  %9 = call i32 @asiliant_calc_dclk2(i32* %8, i32* %3, i32* %4, i32* %5)
  %10 = load %struct.fb_info*, %struct.fb_info** %2, align 8
  %11 = getelementptr inbounds %struct.fb_info, %struct.fb_info* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = icmp eq i32 %13, 24
  br i1 %14, label %15, label %19

15:                                               ; preds = %1
  %16 = call i32 @write_xr(i32 129, i32 22)
  %17 = call i32 @write_xr(i32 130, i32 0)
  %18 = call i32 @write_xr(i32 32, i32 32)
  br label %52

19:                                               ; preds = %1
  %20 = load %struct.fb_info*, %struct.fb_info** %2, align 8
  %21 = getelementptr inbounds %struct.fb_info, %struct.fb_info* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = icmp eq i32 %23, 16
  br i1 %24, label %25, label %39

25:                                               ; preds = %19
  %26 = load %struct.fb_info*, %struct.fb_info** %2, align 8
  %27 = getelementptr inbounds %struct.fb_info, %struct.fb_info* %26, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %27, i32 0, i32 2
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = icmp eq i32 %30, 11
  br i1 %31, label %32, label %34

32:                                               ; preds = %25
  %33 = call i32 @write_xr(i32 129, i32 21)
  br label %36

34:                                               ; preds = %25
  %35 = call i32 @write_xr(i32 129, i32 20)
  br label %36

36:                                               ; preds = %34, %32
  %37 = call i32 @write_xr(i32 130, i32 0)
  %38 = call i32 @write_xr(i32 32, i32 16)
  br label %51

39:                                               ; preds = %19
  %40 = load %struct.fb_info*, %struct.fb_info** %2, align 8
  %41 = getelementptr inbounds %struct.fb_info, %struct.fb_info* %40, i32 0, i32 0
  %42 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  %44 = icmp eq i32 %43, 8
  br i1 %44, label %45, label %50

45:                                               ; preds = %39
  %46 = call i32 @write_xr(i32 10, i32 2)
  %47 = call i32 @write_xr(i32 129, i32 18)
  %48 = call i32 @write_xr(i32 130, i32 0)
  %49 = call i32 @write_xr(i32 32, i32 0)
  br label %50

50:                                               ; preds = %45, %39
  br label %51

51:                                               ; preds = %50, %36
  br label %52

52:                                               ; preds = %51, %15
  %53 = load %struct.fb_info*, %struct.fb_info** %2, align 8
  %54 = getelementptr inbounds %struct.fb_info, %struct.fb_info* %53, i32 0, i32 0
  %55 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %54, i32 0, i32 1
  %56 = load i32, i32* %55, align 4
  %57 = load %struct.fb_info*, %struct.fb_info** %2, align 8
  %58 = getelementptr inbounds %struct.fb_info, %struct.fb_info* %57, i32 0, i32 0
  %59 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %58, i32 0, i32 0
  %60 = load i32, i32* %59, align 4
  %61 = ashr i32 %60, 3
  %62 = mul nsw i32 %56, %61
  %63 = load %struct.fb_info*, %struct.fb_info** %2, align 8
  %64 = getelementptr inbounds %struct.fb_info, %struct.fb_info* %63, i32 0, i32 1
  %65 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %64, i32 0, i32 0
  store i32 %62, i32* %65, align 4
  %66 = load %struct.fb_info*, %struct.fb_info** %2, align 8
  %67 = getelementptr inbounds %struct.fb_info, %struct.fb_info* %66, i32 0, i32 0
  %68 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %67, i32 0, i32 0
  %69 = load i32, i32* %68, align 4
  %70 = icmp eq i32 %69, 8
  br i1 %70, label %71, label %73

71:                                               ; preds = %52
  %72 = load i32, i32* @FB_VISUAL_PSEUDOCOLOR, align 4
  br label %75

73:                                               ; preds = %52
  %74 = load i32, i32* @FB_VISUAL_TRUECOLOR, align 4
  br label %75

75:                                               ; preds = %73, %71
  %76 = phi i32 [ %72, %71 ], [ %74, %73 ]
  %77 = load %struct.fb_info*, %struct.fb_info** %2, align 8
  %78 = getelementptr inbounds %struct.fb_info, %struct.fb_info* %77, i32 0, i32 1
  %79 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %78, i32 0, i32 1
  store i32 %76, i32* %79, align 4
  %80 = load i32, i32* %3, align 4
  %81 = call i32 @write_xr(i32 196, i32 %80)
  %82 = load i32, i32* %4, align 4
  %83 = call i32 @write_xr(i32 197, i32 %82)
  %84 = load i32, i32* %5, align 4
  %85 = call i32 @write_xr(i32 199, i32 %84)
  %86 = load %struct.fb_info*, %struct.fb_info** %2, align 8
  %87 = call i32 @asiliant_set_timing(%struct.fb_info* %86)
  ret i32 0
}

declare dso_local i32 @asiliant_calc_dclk2(i32*, i32*, i32*, i32*) #1

declare dso_local i32 @write_xr(i32, i32) #1

declare dso_local i32 @asiliant_set_timing(%struct.fb_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
